--- a/lexicon/templates/lexicon/language.html
+++ b/lexicon/templates/lexicon/language.html
@@ -1,1 +1,28 @@
-{{ language }}
+{% extends "base.html" %}
+
+{% block title %}Leksemaro &mdash; {% block header_title %}{{language.name}}{% endblock header_title %}{% endblock title %}
+
+{% block content %}
+<h2>
+    Части речи
+</h2>
+{% if language.word_classes %}
+<div class="grid">
+    {% for word_class in language.word_classes %}
+    <article class="s6 m4 l3">
+        <h5>{{word_class.name}}</h5>
+        <p>Слов: {{word_class.word_count}}</p>
+        <nav>
+            <a class="button" href="{% url "lexicon:word_class" word_class.id %}">
+                Учить!
+            </a>
+        </nav>
+    </article>
+    {% endfor %}
+</div>
+{% else %}
+<div class="absolute center">
+    <p>Пока нет частей речи</p>
+</div>
+{% endif %}
+{% endblock content %}
