--- a/lexicon/templates/lexicon/language.html
+++ b/lexicon/templates/lexicon/language.html
@@ -1,14 +1,17 @@
-{% extends "base.html" %}
+{% extends "base_item.html" %}
 
 {% block title %}Leksemaro &mdash; {% block header_title %}{{language.name}}{% endblock header_title %}{% endblock title %}
+
+{% block back_url %}{% url "lexicon:index" %}{% endblock back_url %}
 
 {% block content %}
 <h2>
     Части речи
 </h2>
-{% if language.word_classes %}
+{% with word_classes=language.word_classes %}
+{% if word_classes %}
 <div class="grid">
-    {% for word_class in language.word_classes %}
+    {% for word_class in word_classes %}
     <article class="s6 m4 l3">
         <h5>{{word_class.name}}</h5>
         <p>Слов: {{word_class.word_count}}</p>
@@ -25,4 +28,5 @@
     <p>Пока нет частей речи</p>
 </div>
 {% endif %}
+{% endwith %}
 {% endblock content %}
