--- a/lexicon/templates/base.html
+++ b/lexicon/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -6,6 +7,7 @@
     <title>{% block title %}Leksemaro{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/beercss@3.9.7/dist/cdn/beer.min.css" rel="stylesheet">
     <script type="module" src="https://cdn.jsdelivr.net/npm/beercss@3.9.7/dist/cdn/beer.min.js"></script>
+    <script type="module" src="{% static 'registration/script.js' %}"></script>
 </head>
 <body>
     <header class="fill">
@@ -16,9 +18,23 @@
             </a>
             {% endblock left_nav_button %}
             <h1 class="max center-align small">{% block header_title %}Leksemaro{% endblock header_title %}</h1>
-            <button class="circle transparent">
-                <img class="responsive" src="/favicon.png">
-            </button>
+            <div>
+                <button class="circle transparent" data-ui="#account-menu">
+                    <i>person</i>
+                    {% comment %} <img class="responsive" src="/favicon.png"> {% endcomment %}
+                </button>
+                {% if user.is_authenticated %}
+                <dialog class="right" id="account-menu">
+                    <h5>{{user}}</h5>
+                    <nav class="right-align">
+                    <form action="{% url 'accounts:logout' %}" method="post">
+                        {% csrf_token %}
+                        <button class="error" type="submit">Выйти</button>
+                    </form>
+                    </nav>
+                </dialog>
+                {% endif %}
+            </div>
         </nav>
     </header>
     <main class="responsive">
