--- a/accounts/templates/registration/div.html
+++ b/accounts/templates/registration/div.html
@@ -1,6 +1,10 @@
 {% for field in form %}
-<div class="field border label">
+<div class="field border label {% if field.errors %}invalid{% endif %}">
     {{field}}
     {{field.label_tag}}
+    {% if field.errors %}
+        <i>error</i>
+        <span class="error">{{field.errors.0}}</span>
+    {% endif %}
 </div>
 {% endfor %}
