--- a/lexicon/templates/base.html
+++ b/lexicon/templates/base.html
@@ -8,13 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/beercss@3.9.7/dist/cdn/beer.min.css" rel="stylesheet">
     <script type="module" src="https://cdn.jsdelivr.net/npm/beercss@3.9.7/dist/cdn/beer.min.js"></script>
     <script type="module" src="{% static 'registration/script.js' %}"></script>
+    <link href="{% static 'style.css' %}" rel="stylesheet"> 
 </head>
 <body>
-    <header class="fill">
+    <header class="fill bottom-margin">
         <nav>
             {% block left_nav_button %}
-            <a class="button circle transparent" href="">
-                <i>add</i>
+            <a class="button circle transparent" href="{% url 'lexicon:index' %}">
+                <i>home</i>
             </a>
             {% endblock left_nav_button %}
             <h1 class="max center-align small">{% block header_title %}Leksemaro{% endblock header_title %}</h1>
