Изменил кнопки на плашках языков и частей речи

--- a/lexicon/templates/lexicon/language.html
+++ b/lexicon/templates/lexicon/language.html
@@ -16,8 +16,8 @@
         <h5>{{word_class.name}}</h5>
         <p>Слов: {{word_class.word_count}}</p>
         <nav>
-            <a class="button" href="{% url "lexicon:word_class" word_class.id %}">
-                Учить!
+            <a class="button fill" href="{% url "lexicon:word_class" word_class.id %}">
+                Слова
             </a>
         </nav>
     </article>
