--- a/lexicon/templates/lexicon/language_list.html
+++ b/lexicon/templates/lexicon/language_list.html
@@ -10,8 +10,11 @@
             <h5>{{language.name}}</h5>
             <p>Слов: {{language.word_count}}</p>
             <nav>
-                <a class="button" href="{% url "lexicon:language" language.id %}">
+                <a class="button primary" href="{% url "lexicon:language" language.id %}">
                     Учить!
+                </a>
+                <a href="{% url "lexicon:language" language.id %}" class="button fill">
+                    Смотреть
                 </a>
             </nav>
         </article>
