--- a/lexicon/templates/lexicon/forms/lexeme_with_meanings.html
+++ b/lexicon/templates/lexicon/forms/lexeme_with_meanings.html
@@ -30,7 +30,7 @@
 {% block form_fields %}
 {{form.as_div}}
 {% for form in meanings.forms %}
-<nav class="meaning-form">
+<nav class="meaning-form bottom-margin">
     {{form.as_div}}
 </nav>
 {% endfor %}
